# src/docs/swagger.yaml
@@ -56,6 +56,13 @@ definitions:
     required:
     - email
     type: object
+  request.ReqSaveFood:
+    properties:
+      foods:
+        items:
+          $ref: '#/definitions/request.SaveFood'
+        type: array
+    type: object
   request.ReqSelectFood:
     properties:
       flavors:
@@ -146,6 +153,23 @@ definitions:
         type: string
       password:
         type: string
+    type: object
+  request.SaveFood:
+    properties:
+      flavors:
+        type: string
+      name:
+        type: string
+      scenarios:
+        type: string
+      themes:
+        type: string
+      times:
+        type: string
+      types:
+        type: string
+    required:
+    - name
     type: object
   response.Category:
     properties:
@@ -778,6 +802,41 @@ paths:
       summary: 액세스 토큰 재발급
       tags:
       - auth
+  /v0.1/foods:
+    post:
+      description: |-
+        ■ errCode with 400
+        PARAM_BAD : 파라미터 오류
+        USER_NOT_EXIST : 유저가 존재하지 않음
+        USER_ALREADY_EXISTED : 유저가 이미 존재
+
+        ■ errCode with 500
+        INTERNAL_SERVER : 내부 로직 처리 실패
+        INTERNAL_DB : DB 처리 실패
+        PLAYER_STATE_CHANGE_FAILED : 플레이어 상태 변경 실패
+      parameters:
+      - description: 이름, 시간, 상황, 맛, 테마, 종류
+        in: body
+        name: type
+        required: true
+        schema:
+          $ref: '#/definitions/request.ReqSaveFood'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: 음식 이름 저장하기
+      tags:
+      - food
   /v0.1/foods/daily-recommend:
     get:
       description: |-
